@startuml

title __CALCULATOR's Class Diagram__\n

  namespace  {
    class CalculationsClass {
    }
  }
  

  namespace  {
    class CalculatorGUI {
    }
  }
  

  namespace  {
    class FractionCalculator {
    }
  }
  

  namespace  {
    class ScientificCalculator {
    }
  }
  

  namespace  {
    class calculator {
    }
  }
  

  namespace  {
    class comboBox2 {
    }
  }
  

  namespace  {
    class comboBox3 {
    }
  }
  

  namespace  {
    class combobox {
    }
  }
  

  CalculatorGUI o-- CalculationsClass : cal
  CalculatorGUI o-- FractionCalculator : fCal
  CalculatorGUI o-- ScientificCalculator : sCal
  comboBox2 -up-|> javax.swing.JFrame
  comboBox3 o-- comboBox3.ItemHandler : handler
  combobox -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
